<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_pressed"
    android:padding="@dimen/naturalMargin"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/alias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p10_user"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"/>
            <TextView
                android:id="@+id/tAlias"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/alias"
                android:gravity="right"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p10_email"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/tEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/email"
            android:gravity="right"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p10_userContact"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/tContact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/contact"
            android:gravity="right"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p10_city"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/tCity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/city"
            android:gravity="right"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p10_address"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/tAdress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/address"
            android:gravity="right"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/naturalMargin"
        android:layout_marginBottom="@dimen/naturalMargin"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/p10_edit"
            android:background="@drawable/btn_rounded"
            android:padding="@dimen/btn_padding"
            android:onClick="completeData"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/p10_disconnect"
            android:background="@drawable/btn_rounded"
            android:padding="@dimen/btn_padding"
            android:onClick="disconnect"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p10_unsubscribe"
            android:background="@drawable/btn_rounded"
            android:padding="@dimen/btn_padding"
            android:onClick="unsubscribe"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/naturalMargin"
        android:layout_marginLeft="@dimen/naturalMargin"
        android:layout_marginRight="@dimen/naturalMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p10_contact"
        android:clickable="true"
        android:onClick="contact"
        android:textColor="@color/color_link"/>

</LinearLayout>