<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_pressed"
    android:padding="@dimen/naturalMargin">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p10_user"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>
        <EditText
            android:id="@+id/tUser"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/user"
            android:gravity="right" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p10_pass"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>
        <EditText
            android:id="@+id/tPass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true"
            android:layout_toRightOf="@+id/pass"
            android:gravity="right"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/confirmPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p11_repeatPass"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>
        <EditText
            android:id="@+id/tConfirmPass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true"
            android:layout_toRightOf="@+id/confirmPass"
            android:gravity="right"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:text="@string/p10_email"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>
        <EditText
            android:id="@+id/tMail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/mail"
            android:gravity="right"
            android:autoText="false" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/naturalMargin" >
        <TextView
            android:id="@+id/province"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p11_province"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>
        <Spinner
            android:id="@+id/tProvince"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/province"
            android:gravity="right"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/naturalMargin" >
        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p10_city"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>
        <Spinner
            android:id="@+id/tCity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/city"
            android:gravity="right"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p11_info"
        android:gravity="center"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p11_name"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>
        <EditText
            android:id="@+id/tName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/name"
            android:gravity="right"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/surnames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p11_surname"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>
        <EditText
            android:id="@+id/tSurnames"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/surnames"
            android:gravity="right"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p10_address"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>
        <EditText
            android:id="@+id/tAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/address"
            android:gravity="right"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/CP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p11_cp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>
        <EditText
            android:id="@+id/tCP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/CP"
            android:gravity="right"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        <CheckBox
            android:id="@+id/agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p11_agree"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/agree"
            android:textColor="@color/color_link"
            android:text="@string/p11_conditions"
            android:clickable="true"
            android:onClick="showConditions"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <Button
        android:id="@+id/sendData"
        android:layout_marginTop="@dimen/naturalMargin"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded"
        android:padding="@dimen/btn_padding"
        android:onClick="sendData"
        android:layout_gravity="center"/>
</LinearLayout>