<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/naturalMargin"
    android:background="@drawable/btn_pressed">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/naturalMargin">
        <TextView
            android:id="@+id/subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p12_subject"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>
        <EditText
            android:id="@+id/tSubject"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/naturalMargin"
            android:layout_toRightOf="@+id/subject"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p12_message"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="0 / 500"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/tMessage"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="8"
        android:gravity="top|left"
        android:maxLines="8"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:scrollbars="vertical"
        android:padding="@dimen/naturalMargin"
        android:background="@drawable/btn_pressed"
        android:layout_marginBottom="@dimen/naturalMargin"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/naturalMargin">
        <TextView
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p12_mail"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>
        <EditText
            android:id="@+id/tMail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/naturalMargin"
            android:layout_toRightOf="@+id/mail"/>
    </RelativeLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/naturalMargin"
        android:paddingRight="@dimen/naturalMargin"
        android:text="@string/p12_sendMessage"
        android:background="@drawable/btn_rounded"
        android:onClick="sendMessage"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/naturalMargin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_pressed"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/p12_explain"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/p12_ourMail"
            android:textColor="@color/color_link"
            android:linksClickable="true"
            android:autoLink="all"/>
    </LinearLayout>

</LinearLayout>